--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "school-ctf",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "netlify-build": "next build"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "^14.0.0",
@@ -24,9 +27,6 @@
     "postcss": "^8.4.32",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0"
-  },
-  "optionalDependencies": {
-    "@netlify/plugin-nextjs": "^4.39.3"
   }
 }
 
